--- a/plugins/subtitle/popcorn.subtitle.html
+++ b/plugins/subtitle/popcorn.subtitle.html
@@ -5,6 +5,14 @@
   <script src="../../popcorn.js"></script>
   <script src="popcorn.subtitle.js"></script>
   <script>
+var output;
+
+    document.addEventListener( "DOMContentLoaded", function() {
+      var p = Popcorn( "#video" , {
+        pauseOnLinkClicked: true
+      })
+      .play();
+    }, false);
     document.addEventListener( "DOMContentLoaded", function() {
       var p = Popcorn( "#video" )
       .volume( 0 )
@@ -43,6 +51,8 @@
       <p>Your user agent does not support the HTML5 Video element.</p>
 
     </video>
+
+    <button onclick=''>test</button>
   </div>
 
 </body>
