--- a/plugins/subtitle/popcorn.subtitle.html
+++ b/plugins/subtitle/popcorn.subtitle.html
@@ -5,15 +5,9 @@
   <script src="../../popcorn.js"></script>
   <script src="popcorn.subtitle.js"></script>
   <script>
-var output;
-
-    document.addEventListener( "DOMContentLoaded", function() {
-      var p = Popcorn( "#video" , {
-        pauseOnLinkClicked: true
-      })
-      .play();
-    }, false);
-    document.addEventListener( "DOMContentLoaded", function() {
+    var fw, fcol;
+//    document.addEventListener( "DOMContentLoaded", function() {
+function play(){
       var p = Popcorn( "#video" )
       .volume( 0 )
       .play()
@@ -27,7 +21,22 @@ var output;
         end: 45,
         text: "this is the second subtitle of 2011",
       })
-    }, false);
+};
+
+function changeColor(color){
+    fcol=color;
+};
+
+function pause(){
+    Popcorn.instances.forEach( function( video ) {
+
+        video.pause();
+      
+    });
+};
+
+//    }, false);
+
   </script>
 </head>
 <body>
@@ -51,8 +60,27 @@ var output;
       <p>Your user agent does not support the HTML5 Video element.</p>
 
     </video>
-
-    <button onclick=''>test</button>
+    <br/>
+    <table>
+    <tr>
+    <td>
+     <input type="button" value="play" onClick="play();"/>
+     <input type="button" value="pause" onClick="pause();"/>
+    </td>
+    </td>
+    <tr>
+    <td>
+     Text color:
+    </td>
+    <td>
+     <input type="button" value="red" onClick="changeColor('red');"/>
+    </td>
+    <td>
+     <input type="button" value="blue" onClick="changeColor('blue');"/>
+    </td>
+    <td>
+     <input type="button" value="white" onClick="changeColor('white');"/>
+    </td>
   </div>
 
 </body>
