--- a/plugins/subtitle/popcorn.subtitle.html
+++ b/plugins/subtitle/popcorn.subtitle.html
@@ -81,6 +81,8 @@ function pause(){
     <td>
      <input type="button" value="white" onClick="changeColor('white');"/>
     </td>
+    </tr>
+    </table>
   </div>
 
 </body>
